OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.2.4

New features:
- 3489873: A scheduler task to copy terms to an index
- 3489642: Unable to scroll all the log in runtime/logs panel
- 3487772: Advanced spell check
- 3487219: RegExp filter for DatabaseCrawler
- 3483920: BoostQuery support
- 3483681: Add a download button for log files
- 3482284: LimitInputStream should be buffered
- 3477836: A separated error log for the parser	
- 3469777: Scored snippets

Bug fixes:
- 3489854: A faster indexation when using XML upload
- 3489550: Schema API gives IllegalStateException
- 3485241: Pages with meta noindex are indexed
- 3483798: HTML parser prints many logs
- 3483259: Underscore added when using synonyms on expression
- 3482151: Monitor API response gives error
- 3479649: SetField and DeleteField API don't update config.xml
- 3479548: Report log files are truncated
- 3476578: UTF-8 character as separator in snippet field
- 3475446: head indexed instead of body (using <script /> in head)
- 3476551: Query with Quotation Marks has unusual results	
- 3472905: Error while crawling local HTML file
- 3471749: Out Of Memory Error while indexing PDF document

OpenSearchServer 1.2.3

New features:
- 3431741: Fault tolerant parser on XML upload
- 3429967: Scheduler task: monitoring upload
- 3419014: Delete by query task in scheduler
- 3396935: Log files viewable in the user interface
- 3393751: XML load sheduler task
- 3393063: Upgrade to SeleniumHQ 2.0.4
- 3393052: Upgrade to NekoHTML 1.9.15
- 3393047: Upgrade to TagSoup 1.2.1
- 3393046: Upgrade to PDFBox 1.6.x
- 3393032: Frameset support
- 3392359: Drupal module for OpenSearchServer
- 3380911: Scheduler informations in home view	
- 3370376: Parser have editable parameters
- 3366055: URLBrowser API
- 3353874: OSS could be a great sitemap generator