@@ -1,7 +1,7 @@
 /**   
  * License Agreement for OpenSearchServer
  *
- * Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -24,11 +24,25 @@
 
 package com.jaeksoft.searchlib.template;
 
+import java.io.File;
+
 public class EmptyIndex extends TemplateAbstract {
 
 	public final static String root = "empty_index";
 
-	public final static String[] resources = { "config.xml", "parsers.xml" };
+	public final static String[] resources = {
+
+	"config.xml", "parsers.xml",
+
+	"renderers" + File.separator + "default.xml",
+
+	"stopwords" + File.separator + "English stop words",
+
+	"stopwords" + File.separator + "French stop words",
+
+	"stopwords" + File.separator + "German stop words",
+
+	};
 
 	public final static String publicName = "Empty index";
 
