@@ -1,7 +1,7 @@
 /**   
  * License Agreement for OpenSearchServer
  *
- * Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -24,6 +24,8 @@
 
 package com.jaeksoft.searchlib.template;
 
+import java.io.File;
+
 public class WebCrawler extends TemplateAbstract {
 
 	public final static String publicName = "web crawler";
@@ -34,9 +36,23 @@ public class WebCrawler extends TemplateAbstract {
 
 	public final static String root = "web_crawler";
 
-	public final static String[] resources = { "config.xml", "parsers.xml",
-			"requests.xml", "webcrawler-mapping.xml",
-			"webcrawler-urlfilter.xml" };
+	public final static String[] resources = {
+
+	"config.xml", "parsers.xml",
+
+	"requests.xml", "webcrawler-mapping.xml",
+
+	"webcrawler-urlfilter.xml",
+
+	"renderers" + File.separator + "default.xml",
+
+	"stopwords" + File.separator + "English stop words",
+
+	"stopwords" + File.separator + "French stop words",
+
+	"stopwords" + File.separator + "German stop words"
+
+	};
 
 	protected WebCrawler() {
 		super(root, resources, publicName, description);
