@@ -156,6 +156,16 @@
 				<filter class="SnowballTurkishFilter" />
 			</analyzer>
 
+			<!-- Autocompletion -->
+			<analyzer name="AutoCompletionAnalyzer" lang="">
+				<tokenizer class="StandardTokenizer" />
+				<filter class="ShingleFilter" max_shingle_size="5"
+					min_shingle_size="1" scope="QUERY_INDEX" token_separator=" " />
+				<filter class="PrefixSuffixStopFilter" ignore_case="true"
+					prefixList="English stop words" scope="QUERY_INDEX" suffixList="English stop words"
+					token_separator=" " />
+			</analyzer>
+
 		</analyzers>
 
 		<fields />
