@@ -157,6 +157,16 @@
 				<filter class="SnowballTurkishFilter" />
 			</analyzer>
 
+			<!-- Autocompletion -->
+			<analyzer name="AutoCompletionAnalyzer" lang="">
+				<tokenizer class="StandardTokenizer" />
+				<filter class="ShingleFilter" max_shingle_size="5"
+					min_shingle_size="1" scope="QUERY_INDEX" token_separator=" " />
+				<filter class="PrefixSuffixStopFilter" ignore_case="true"
+					prefixList="English stop words" scope="QUERY_INDEX" suffixList="English stop words"
+					token_separator=" " />
+			</analyzer>
+
 		</analyzers>
 
 		<fields default="content" unique="url">
@@ -169,7 +179,8 @@
 				stored="compress" termVector="positions_offsets" />
 			<field name="contentExact" analyzer="StandardAnalyzer" indexed="yes"
 				stored="compress" termVector="positions_offsets" />
-			<field name="contentBaseType" indexed="yes" stored="no" termVector="yes" />
+			<field name="contentBaseType" indexed="yes" stored="no"
+				termVector="yes" />
 			<field name="url" indexed="yes" stored="no" termVector="yes" />
 			<field name="urlSplit" indexed="yes" stored="no" analyzer="TextAnalyzer"
 				termVector="positions_offsets" />
@@ -179,6 +190,8 @@
 			<field name="metaKeywords" indexed="no" stored="compress" />
 			<field name="host" indexed="yes" stored="no" termVector="yes" />
 			<field name="subhost" indexed="yes" stored="no" />
+			<field name="autocomplete" analyzer="AutoCompletionAnalyzer"
+				indexed="yes" stored="no" termVector="no" />
 		</fields>
 	</schema>
 
